<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/firewall_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="1"
        android:title="@string/firewall_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/firewall_switch_item"
        android:orderInCategory="2"
        android:title="@string/firewall_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/firewall_settings"
        android:orderInCategory="3"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
</menu>
