<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/firewall_search"
        android:orderInCategory="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_switch_item"
        android:title="@string/firewall_switch"
        android:orderInCategory="2"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="3"
        android:title="@string/title_activity_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>