<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_activity_path" />

    <EditText
        android:id="@+id/etLogsPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <ProgressBar
        android:id="@+id/pbHelp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSaveLogs"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_activity_save_logs" />

    <Switch
        android:id="@+id/swRootCommandsLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/pref_common_log_root_commands" />

</LinearLayout>